# ShieldX-Antivirus

./: .env  .gitignore  .gitmodules  README.md  docker-compose.yml  key.env  main.py  pyproject.toml
agents/: agent.py  embedder.py  reasoner.py  report.py  summarizer.py
db/: av.db  database.db  embeddings.db  models.py  schema.sql
db/embedding_db/: chroma.sqlite3
dynamic/: virustotal.py
sandbox/: guest.py
scanner/: scanner.py
static/: __init__.py  hash_checker.py  metadata.py  scanner.py  yara.py
tests/: __init__.py  static_test.py  tests.py
tests/assets/: hello
ui/: main.py  main_window.py  notification_dialog.py  scan_button.py
ui/pages/: about.py  dashboard.py  graph.py  scan_history.py  scanning.py  security_analytics.py  settings.py  summary.py  system_health.py  top_threats.py
utils/: device_utils.py
